--- a/public/css/user.css
+++ b/public/css/user.css
@@ -98,7 +98,7 @@ body {
     position: relative;
     left: 38px; }
   #meal-planner .box-title {
-    width: calc(100% - 40px);
+    width: 100%;
     height: 94px;
     line-height: 64px;
     padding: 0 20px;
