--- a/public/css/user.css
+++ b/public/css/user.css
@@ -14,8 +14,19 @@ body {
   padding-left: 25px; }
 
 #notes .page-container {
-  margin-top: 11%; }
+  margin-top: 11%;
+  width: calc( 100% - 340px ); }
 
+@media all and (max-width: 1000px) {
+  #note-editor .page-container .paper {
+    width: 600px;
+    height: 900px; }
+
+  #note-editor .page-container textarea {
+    width: 90%; }
+
+  #note-editor .page-container {
+    padding-left: 0; } }
 @media screen and (max-width: 1300px) {
   .page-container, #notes .page-container {
     margin-top: 15%; } }
